# aruvi-saas

./: .gitignore  ALLOCATION_REPORT_WIRING_SUMMARY.md  Aruvi-SaaS planner.md  CLAUDE.md  CLOUD_DATA_MODEL.md  MEMORY.md  README.md  esb.err  ok-we-are-done-floofy-clarke.md  pyproject.toml
.claude/: launch.json
_to_delete/: aruvi_bundle.tgz  sci_viii_ch5_view.json
api/: __init__.py  config.py  data.py  main.py  requirements.txt
aruvi-scripts/: split_english_chapters.py
aruvi_core/: __init__.py  allocate.py  assessment_norm.py  engine.py  export_allocation_docx.py  export_allocation_pdf.py  export_assessment_pdf.py  export_docx.py  export_integrated_pdf.py  export_lesson_pdf.py  grades.py  link_resolver.py  normalize.py  pdf_fonts.py  ports.py  report_allocation.py  report_competency.py  unitize.py  view_model.py
data/: CLOUD_DATA_MODEL.md  README.md
docs/: ALLOCATION_REPORT_INTEGRATION.md  Aruvi_Mobile_First_Progressive_Acquisition_Model_v0.2.md  TEST_PLAN_2026-07-06.md  TEST_REPORT_2026-07-06.md  architecture-plan.md  assessment-question-type-registry.md  execution-architecture-and-token-efficiency.md  middle_ss_constitution_rewrite_brief.md  ncf_chapterwise_period_allocation.xlsx  secondary_ss_assessment_revamp_proposal.md
genon/: README.md  apply_delta.py  compile_stream.py  dry_run_test.py  genon_adaptation_doc.md  make_amendments.py  partition.py  polish_seams.py  run_genon.py
others/: ALLOCATION_REPORT_DESIGN_NOTES.md  ALLOCATION_REPORT_QUICK_START.md  README.md
planning-layer-mockups/: index.html  shot2.py
tests/: test_allocate.py  test_api.py  (+16 more)
(+972 files in other folders)
